--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
+    "@types/react-alert": "^5.2.0",
     "@types/react-dom": "16.9.0",
+    "@types/react-s-alert": "^1.3.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.9.0",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^4.3.2",
     "typescript": "3.6.3"
   },
