--- a/package.json
+++ b/package.json
@@ -1,46 +1,62 @@
 {
-  "name": "electronic-doc-management-front",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@mdi/js": "^4.4.95",
-    "@mdi/react": "^1.2.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-alert": "^5.2.0",
-    "@types/react-dom": "16.9.0",
-    "@types/react-s-alert": "^1.3.2",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-alert": "^5.5.0",
-    "react-alert-template-basic": "^1.0.0",
-    "react-dom": "^16.9.0",
-    "react-s-alert": "^1.4.1",
-    "react-scripts": "3.1.1",
-    "react-transition-group": "^4.3.0",
-    "styled-components": "^4.3.2",
-    "typescript": "3.6.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "electronic-doc-management-front",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material/react-text-field": "^0.15.0",
+        "@mdi/js": "^4.4.95",
+        "@mdi/react": "^1.2.1",
+        "@types/jest": "24.0.18",
+        "@types/node": "12.7.5",
+        "@types/react": "^16.9.5",
+        "@types/react-alert": "^5.2.0",
+        "@types/react-dom": "16.9.0",
+        "@types/react-native": "^0.60.18",
+        "@types/react-s-alert": "^1.3.2",
+        "material-components-web": "^3.2.0",
+        "node-sass": "^4.12.0",
+        "react": "^16.9.0",
+        "react-alert": "^5.5.0",
+        "react-alert-template-basic": "^1.0.0",
+        "react-art": "^16.10.2",
+        "react-dom": "^16.9.0",
+        "react-native-paper": "^2.16.0",
+        "react-native-web": "^0.11.7",
+        "react-s-alert": "^1.4.1",
+        "react-scripts": "3.1.1",
+        "react-transition-group": "^4.3.0",
+        "styled-components": "^4.3.2",
+        "typescript": "3.6.3"
+    },
+    "scripts": {
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
+        "eject": "react-app-rewired eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+        "@babel/preset-env": "^7.6.2",
+        "@babel/preset-flow": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
+        "babel-loader": "^8.0.6",
+        "file-loader": "^4.2.0",
+        "react-app-rewired": "^2.1.3"
+    }
 }
