--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "maven.view": "hierarchical"
+    "maven.view": "hierarchical",
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        {
+          "language": "typescript",
+          "autoFix": true
+        },
+        {
+          "language": "typescriptreact",
+          "autoFix": true
+        }
+      ],
 }
