--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "react-native-paper": "^2.16.0",
         "react-native-web": "^0.11.7",
         "react-s-alert": "^1.4.1",
-        "react-scripts": "3.1.1",
+        "react-scripts": "3.1.2",
         "react-transition-group": "^4.3.0",
         "styled-components": "^4.3.2",
         "typescript": "3.6.3"
@@ -32,7 +32,8 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "lint:fix": "eslint './src/**/*.{ts,tsx}'"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -55,7 +56,10 @@
         "@babel/preset-env": "^7.6.2",
         "@babel/preset-flow": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
         "babel-loader": "^8.0.6",
+        "eslint-config-react": "^1.1.7",
         "file-loader": "^4.2.0",
         "react-app-rewired": "^2.1.3"
     }
