--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "^1.3.11",
+        "@material-ui/core": "^4.5.0",
+        "@material-ui/pickers": "^3.2.6",
         "@material/react-text-field": "^0.15.0",
         "@mdi/js": "^4.4.95",
         "@mdi/react": "^1.2.1",
@@ -12,7 +15,10 @@
         "@types/react-alert": "^5.2.0",
         "@types/react-dom": "16.9.0",
         "@types/react-native": "^0.60.18",
+        "@types/react-redux": "^7.1.4",
         "@types/react-s-alert": "^1.3.2",
+        "@types/redux": "^3.6.0",
+        "date-fns": "^2.0.0-beta.5",
         "material-components-web": "^3.2.0",
         "node-sass": "^4.12.0",
         "react": "^16.9.0",
@@ -22,8 +28,10 @@
         "react-dom": "^16.9.0",
         "react-native-paper": "^2.16.0",
         "react-native-web": "^0.11.7",
+        "react-redux": "^7.1.1",
         "react-s-alert": "^1.4.1",
         "react-scripts": "3.1.2",
+        "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
         "styled-components": "^4.3.2",
         "typescript": "3.6.3"
@@ -61,6 +69,7 @@
         "babel-loader": "^8.0.6",
         "eslint-config-react": "^1.1.7",
         "file-loader": "^4.2.0",
-        "react-app-rewired": "^2.1.3"
+        "react-app-rewired": "^2.1.3",
+        "redux-devtools": "^3.5.0"
     }
 }
