--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "@types/react-redux": "^7.1.4",
         "@types/react-s-alert": "^1.3.2",
         "@types/redux": "^3.6.0",
+        "@types/redux-thunk": "^2.1.0",
+        "@types/reselect": "^2.2.0",
+        "@types/uuid": "^3.4.5",
         "date-fns": "^2.0.0-beta.5",
         "material-components-web": "^3.2.0",
         "node-sass": "^4.12.0",
@@ -33,8 +36,10 @@
         "react-scripts": "3.1.2",
         "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
+        "reselect": "^4.0.0",
         "styled-components": "^4.3.2",
-        "typescript": "3.6.3"
+        "typescript": "3.6.3",
+        "uuid": "^3.3.3"
     },
     "scripts": {
         "start": "react-app-rewired start",
@@ -70,6 +75,7 @@
         "eslint-config-react": "^1.1.7",
         "file-loader": "^4.2.0",
         "react-app-rewired": "^2.1.3",
-        "redux-devtools": "^3.5.0"
+        "redux-devtools": "^3.5.0",
+        "redux-devtools-extension": "^2.13.8"
     }
 }
