--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-native-paper": "^2.16.0",
         "react-native-web": "^0.11.7",
         "react-redux": "^7.1.1",
+        "react-router-dom": "^5.1.2",
         "react-s-alert": "^1.4.1",
         "react-scripts": "3.1.2",
         "react-thunk": "^1.0.0",
