--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@material/react-text-field": "^0.15.0",
         "@mdi/js": "^4.4.95",
         "@mdi/react": "^1.2.1",
+        "@mrblenny/react-flow-chart": "^0.0.7",
         "@types/jest": "24.0.18",
         "@types/node": "12.7.5",
         "@types/react": "^16.9.5",
@@ -17,9 +18,7 @@
         "@types/react-native": "^0.60.18",
         "@types/react-redux": "^7.1.4",
         "@types/react-s-alert": "^1.3.2",
-        "@types/redux": "^3.6.0",
-        "@types/redux-thunk": "^2.1.0",
-        "@types/reselect": "^2.2.0",
+        "@types/react-select": "^3.0.5",
         "@types/uuid": "^3.4.5",
         "date-fns": "^2.0.0-beta.5",
         "material-components-web": "^3.2.0",
@@ -30,15 +29,19 @@
         "react-art": "^16.10.2",
         "react-dom": "^16.9.0",
         "react-native-paper": "^2.16.0",
+        "react-native-quick-select": "^0.0.5",
         "react-native-web": "^0.11.7",
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.1.2",
         "react-s-alert": "^1.4.1",
         "react-scripts": "3.1.2",
+        "react-select": "^3.0.8",
+        "react-select-search": "^0.10.1",
         "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
+        "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
-        "styled-components": "^4.3.2",
+        "styled-components": "^4.4.0",
         "typescript": "3.6.3",
         "uuid": "^3.3.3"
     },
