--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-redux": "^7.1.4",
         "@types/react-s-alert": "^1.3.2",
         "@types/react-select": "^3.0.5",
+        "@types/reduce-reducers": "^0.3.0",
         "@types/uuid": "^3.4.5",
         "date-fns": "^2.0.0-beta.5",
         "material-components-web": "^3.2.0",
@@ -39,6 +40,7 @@
         "react-select-search": "^0.10.1",
         "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
+        "reduce-reducers": "^1.0.4",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "styled-components": "^4.4.0",
