--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@mdi/js": "^4.4.95",
         "@mdi/react": "^1.2.1",
         "@mrblenny/react-flow-chart": "^0.0.7",
+        "@types/history": "^4.7.3",
         "@types/jest": "24.0.18",
         "@types/node": "12.7.5",
         "@types/react": "^16.9.5",
@@ -17,11 +18,14 @@
         "@types/react-dom": "16.9.0",
         "@types/react-native": "^0.60.18",
         "@types/react-redux": "^7.1.4",
+        "@types/react-router-dom": "^5.1.0",
         "@types/react-s-alert": "^1.3.2",
         "@types/react-select": "^3.0.5",
         "@types/reduce-reducers": "^0.3.0",
+        "@types/styled-components": "^4.1.19",
         "@types/uuid": "^3.4.5",
         "date-fns": "^2.0.0-beta.5",
+        "history": "^4.10.1",
         "material-components-web": "^3.2.0",
         "node-sass": "^4.12.0",
         "react": "^16.9.0",
