--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
         "reduce-reducers": "^1.0.4",
+        "redux-saga": "^1.1.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "styled-components": "^4.4.0",
