--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "dependencies": {
         "@date-io/date-fns": "^1.3.11",
-        "@material-ui/core": "^4.5.0",
+        "@material-ui/core": "^4.5.2",
+        "@material-ui/icons": "^4.5.1",
         "@material-ui/pickers": "^3.2.6",
         "@material/react-text-field": "^0.15.0",
         "@mdi/js": "^4.4.95",
@@ -12,6 +13,7 @@
         "@mrblenny/react-flow-chart": "^0.0.7",
         "@types/history": "^4.7.3",
         "@types/jest": "24.0.18",
+        "@types/mui-datatables": "^2.12.1",
         "@types/node": "12.7.5",
         "@types/react": "^16.9.5",
         "@types/react-alert": "^5.2.0",
@@ -21,6 +23,7 @@
         "@types/react-router-dom": "^5.1.0",
         "@types/react-s-alert": "^1.3.2",
         "@types/react-select": "^3.0.5",
+        "@types/react-splitter-layout": "^3.0.0",
         "@types/reduce-reducers": "^0.3.0",
         "@types/styled-components": "^4.1.19",
         "@types/uuid": "^3.4.5",
@@ -42,6 +45,7 @@
         "react-scripts": "3.1.2",
         "react-select": "^3.0.8",
         "react-select-search": "^0.10.1",
+        "react-splitter-layout": "^4.0.0",
         "react-thunk": "^1.0.0",
         "react-transition-group": "^4.3.0",
         "reduce-reducers": "^1.0.4",
