--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "redux-saga": "^1.1.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
+        "simple-react-comments": "^1.1.0",
         "styled-components": "^4.4.0",
         "typescript": "3.6.3",
         "uuid": "^3.3.3"
