--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-dom": "^16.9.0",
         "react-native-paper": "^2.16.0",
         "react-native-quick-select": "^0.0.5",
+        "react-native-vector-icons": "^6.6.0",
         "react-native-web": "^0.11.7",
         "react-redux": "^7.1.1",
         "react-router-dom": "^5.1.2",
