--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@types/node": "12.7.5",
         "@types/react": "^16.9.5",
         "@types/react-alert": "^5.2.0",
+        "@types/react-color": "^3.0.1",
         "@types/react-dom": "16.9.0",
+        "@types/react-dropzone": "^5.1.0",
         "@types/react-form": "^2.16.2",
         "@types/react-native": "^0.60.18",
         "@types/react-redux": "^7.1.4",
@@ -38,6 +40,7 @@
         "react-alert": "^5.5.0",
         "react-alert-template-basic": "^1.0.0",
         "react-art": "^16.10.2",
+        "react-color": "^2.17.3",
         "react-dom": "^16.9.0",
         "react-native-paper": "^2.16.0",
         "react-native-quick-select": "^0.0.5",
